made most images same size, fixed logo shadow

--- a/website/assets/styles.css
+++ b/website/assets/styles.css
@@ -171,11 +171,13 @@ section.hero {
 	box-shadow: #000 -2px 10px 30px 0, #000 0 2px 12px;
 	overflow: hidden;
 	border-radius: 50%;
-	z-index: 9;
+	background: #000;
+	z-index: -1;
 }
 
 .logo img {
 	width: 256px;
+	max-width: 912px;
 }
 
 h1 {
@@ -277,10 +279,10 @@ h2 {
 	}
 
 	.logo:after {
-		top: 31px;
-		left: 31px;
-		width: 961px;
-		height: 955px;
+		top: 30px;
+		left: 26px;
+		width: 850px;
+		height: 848px;
 		box-shadow: rgb(0, 0, 0) -10px 20px 30px 0, #000 0 5px 5px;
 	}
 
